--- a/index.html
+++ b/index.html
@@ -23,6 +23,8 @@
     <label for="viewport">
         <input type="checkbox" id="viewport" onclick="game.limit_viewport=this.checked;" checked/> Confine viewport to map</label>
 
+    <script type="text/javascript" src="libraries/lodash.js"></script>
+    <script type="text/javascript" src="mapper.js"></script>
     <script type="text/javascript" src="maps.js"></script>
     <script type="text/javascript" src="edit_this.js"></script>
     <script type="text/javascript" src="game_settings.js"></script>
