--- a/index.html
+++ b/index.html
@@ -24,8 +24,10 @@
         <input type="checkbox" id="viewport" onclick="game.limit_viewport=this.checked;" checked/> Confine viewport to map</label>
 
     <script type="text/javascript" src="libraries/lodash.js"></script>
+    <script type="text/javascript" src="color_presets.js"></script>
     <script type="text/javascript" src="mapper.js"></script>
     <script type="text/javascript" src="maps.js"></script>
+    <script type="text/javascript" src="map_orders.js"></script>
     <script type="text/javascript" src="edit_this.js"></script>
     <script type="text/javascript" src="game_settings.js"></script>
 </body>
