Newest best version
WIP: implementing hints

--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
     <label for="viewport">
         <input type="checkbox" id="viewport" onclick="game.limit_viewport=this.checked;" checked/> Confine viewport to map</label>
 
+    <sciprt type="text/javascript" src="hints.js"></sciprt>
     <script type="text/javascript" src="libraries/lodash.js"></script>
     <script type="text/javascript" src="color_presets.js"></script>
     <script type="text/javascript" src="mapper.js"></script>
