--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <title>Clarity</title>
+    <title>Platformer</title>
 
     <link rel="stylesheet" type="text/css" href="style.css" />
 
@@ -23,14 +23,14 @@
     <label for="viewport">
         <input type="checkbox" id="viewport" onclick="game.limit_viewport=this.checked;" checked/> Confine viewport to map</label>
 
-    <sciprt type="text/javascript" src="hints.js"></sciprt>
+    <script type="text/javascript" src="hints.js"></script>
     <script type="text/javascript" src="libraries/lodash.js"></script>
     <script type="text/javascript" src="color_presets.js"></script>
     <script type="text/javascript" src="mapper.js"></script>
     <script type="text/javascript" src="maps.js"></script>
-    <script type="text/javascript" src="map_orders.js"></script>
     <script type="text/javascript" src="edit_this.js"></script>
     <script type="text/javascript" src="game_settings.js"></script>
+
 </body>
 
 </html>
